// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuditWorklistTab Navigator Renders the Audit WorkList Tab Navigator component without in progress tab 1`] = `
<Context.Provider
  value={
    Object {
      "getServerState": undefined,
      "store": Object {
        "@@observable": [Function],
        "dispatch": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
      "subscription": Object {
        "addNestedSub": [Function],
        "getListeners": [Function],
        "handleChangeWrapper": [Function],
        "isSubscribed": [Function],
        "notifyNestedSubs": [Function],
        "trySubscribe": [Function],
        "tryUnsubscribe": [Function],
      },
    }
  }
>
  <AuditWorklistTabNavigator
    auditWorklistItems={Array []}
    dispatch={[MockFunction]}
    enableAuditsInProgress={false}
    isMounted={
      Object {
        "current": false,
      }
    }
    navigation={
      Object {
        "addListener": [MockFunction],
        "canGoBack": [MockFunction],
        "dispatch": [MockFunction],
        "getId": [MockFunction],
        "getParent": [MockFunction],
        "getState": [MockFunction],
        "goBack": [MockFunction],
        "isFocused": [MockFunction],
        "navigate": [MockFunction],
        "removeListener": [MockFunction],
        "reset": [MockFunction],
        "setOptions": [MockFunction],
        "setParams": [MockFunction],
      }
    }
    route={
      Object {
        "key": "",
        "name": "AuditWorklistTabs",
      }
    }
    scannedEvent={
      Object {
        "type": null,
        "value": null,
      }
    }
    trackEventCall={[MockFunction]}
    useCallbackHook={[MockFunction]}
    useEffectHook={[MockFunction]}
    useFocusEffectHook={[MockFunction]}
    validateSessionCall={[MockFunction]}
  />
</Context.Provider>
`;

exports[`AuditWorklistTab Navigator renders the Audit worklist tab navigator component with in progress tab 1`] = `
<Context.Provider
  value={
    Object {
      "getServerState": undefined,
      "store": Object {
        "@@observable": [Function],
        "dispatch": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
      "subscription": Object {
        "addNestedSub": [Function],
        "getListeners": [Function],
        "handleChangeWrapper": [Function],
        "isSubscribed": [Function],
        "notifyNestedSubs": [Function],
        "trySubscribe": [Function],
        "tryUnsubscribe": [Function],
      },
    }
  }
>
  <AuditWorklistTabNavigator
    auditWorklistItems={Array []}
    dispatch={[MockFunction]}
    enableAuditsInProgress={true}
    isMounted={
      Object {
        "current": false,
      }
    }
    navigation={
      Object {
        "addListener": [MockFunction],
        "canGoBack": [MockFunction],
        "dispatch": [MockFunction],
        "getId": [MockFunction],
        "getParent": [MockFunction],
        "getState": [MockFunction],
        "goBack": [MockFunction],
        "isFocused": [MockFunction],
        "navigate": [MockFunction],
        "removeListener": [MockFunction],
        "reset": [MockFunction],
        "setOptions": [MockFunction],
        "setParams": [MockFunction],
      }
    }
    route={
      Object {
        "key": "",
        "name": "AuditWorklistTabs",
      }
    }
    scannedEvent={
      Object {
        "type": null,
        "value": null,
      }
    }
    trackEventCall={[MockFunction]}
    useCallbackHook={[MockFunction]}
    useEffectHook={[MockFunction]}
    useFocusEffectHook={[MockFunction]}
    validateSessionCall={[MockFunction]}
  />
</Context.Provider>
`;
